Started on machine learning on the contract

--- a/source code/Notebook 1.ipynb
+++ b/source code/Notebook 1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "id": "creative-harmony",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "id": "antique-angola",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "id": "intended-classics",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "id": "fleet-vegetation",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "id": "whole-bumper",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "id": "professional-regulation",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "id": "relevant-dayton",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "id": "parental-bryan",
    "metadata": {
     "scrolled": false
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "id": "accessory-loading",
    "metadata": {},
    "outputs": [],
@@ -736,8 +736,7 @@
     "NEW_FILE = '../data/terms_conditions.txt'\n",
     "with open(NEW_FILE, 'w', encoding=\"utf-8\") as f:\n",
     "    for sentence in terms_cond_list:\n",
-    "        f.write(sentence + \"\\n\")\n",
-    "        f.write(\"\\n\")"
+    "        f.write(sentence + \"\\n\")"
    ]
   }
  ],
